Add java 17 runtime dependency